--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="search">Search</string>
     <string name="sort_by">Sort By</string>
     <string name="high_priority">High Priority</string>
+    <string name="medium_priority">Medium Priority</string>
     <string name="low_priority">Low Priority</string>
     <string name="delete_all">Delete All</string>
     <string name="add">Add</string>
@@ -17,8 +18,8 @@
     <string name="delete">Delete</string>
 
     <string-array name="priorities">
-        <item>High Priority</item>
-        <item>Medium Priority</item>
-        <item>Low Priority</item>
+        <item>@string/high_priority</item>
+        <item>@string/medium_priority</item>
+        <item>@string/low_priority</item>
     </string-array>
 </resources>
